# api/handlers/section.go
@@ -11,7 +11,7 @@ import (
 
 // GetAllSections godoc
 // @Security ApiKeyAuth
-// @Param resource_id header string true "resource_id"
+// @Param Resource-Id header string true "Resource-Id"
 // @ID get_all_sections
 // @Router /v1/section [GET]
 // @Summary Get all sections
@@ -66,7 +66,7 @@ func (h *Handler) GetAllSections(c *gin.Context) {
 
 // UpdateSection godoc
 // @Security ApiKeyAuth
-// @Param resource_id header string true "resource_id"
+// @Param Resource-Id header string true "Resource-Id"
 // @ID update_section
 // @Router /v1/section [PUT]
 // @Summary Update section
