# api/handlers/view.go
@@ -14,7 +14,7 @@ import (
 
 // CreateView godoc
 // @Security ApiKeyAuth
-// @Param resource_id header string true "resource_id"
+// @Param Resource-Id header string true "Resource-Id"
 // @ID create_view
 // @Router /v1/view [POST]
 // @Summary Create view
@@ -70,7 +70,7 @@ func (h *Handler) CreateView(c *gin.Context) {
 
 // GetSingleView godoc
 // @Security ApiKeyAuth
-// @Param resource_id header string true "resource_id"
+// @Param Resource-Id header string true "Resource-Id"
 // @ID get_view_by_id
 // @Router /v1/view/{view_id} [GET]
 // @Summary Get single view
@@ -126,7 +126,7 @@ func (h *Handler) GetSingleView(c *gin.Context) {
 
 // UpdateView godoc
 // @Security ApiKeyAuth
-// @Param resource_id header string true "resource_id"
+// @Param Resource-Id header string true "Resource-Id"
 // @ID update_view
 // @Router /v1/view [PUT]
 // @Summary Update view
@@ -182,7 +182,7 @@ func (h *Handler) UpdateView(c *gin.Context) {
 
 // DeleteView godoc
 // @Security ApiKeyAuth
-// @Param resource_id header string true "resource_id"
+// @Param Resource-Id header string true "Resource-Id"
 // @ID delete_view
 // @Router /v1/view/{view_id} [DELETE]
 // @Summary Delete view
@@ -239,7 +239,7 @@ func (h *Handler) DeleteView(c *gin.Context) {
 
 // GetViewList godoc
 // @Security ApiKeyAuth
-// @Param resource_id header string true "resource_id"
+// @Param Resource-Id header string true "Resource-Id"
 // @ID get_view_list
 // @Router /v1/view [GET]
 // @Summary Get view list
@@ -290,7 +290,7 @@ func (h *Handler) GetViewList(c *gin.Context) {
 
 // ConvertHtmlToPdf godoc
 // @Security ApiKeyAuth
-// @Param resource_id header string true "resource_id"
+// @Param Resource-Id header string true "Resource-Id"
 // @ID convert_html_to_pdf
 // @Router /v1/html-to-pdf [POST]
 // @Summary Convert html to pdf
@@ -355,7 +355,7 @@ func (h *Handler) ConvertHtmlToPdf(c *gin.Context) {
 
 // ConvertTemplateToHtml godoc
 // @Security ApiKeyAuth
-// @Param resource_id header string true "resource_id"
+// @Param Resource-Id header string true "Resource-Id"
 // @ID convert_template_to_html
 // @Router /v1/template-to-html [POST]
 // @Summary Convert template to html
