# api/handlers/view_relation.go
@@ -11,7 +11,7 @@ import (
 
 // GetViewRelation godoc
 // @Security ApiKeyAuth
-// @Param resource_id header string true "resource_id"
+// @Param Resource-Id header string true "Resource-Id"
 // @ID get_single_view_relation
 // @Router /v1/view_relation [GET]
 // @Summary Get single view relation
@@ -71,7 +71,7 @@ func (h *Handler) GetViewRelation(c *gin.Context) {
 
 // UpsertViewRelations godoc
 // @Security ApiKeyAuth
-// @Param resource_id header string true "resource_id"
+// @Param Resource-Id header string true "Resource-Id"
 // @ID upsert_view_relation
 // @Router /v1/view_relation [PUT]
 // @Summary Upsert view relation
